--- a/Assets/CSS/style.css
+++ b/Assets/CSS/style.css
@@ -1,7 +1,6 @@
 body {
     background-image: url(https://images.unsplash.com/photo-1509807995916-c332365e2d9e?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1271&q=80);
 }
-
 .p0 {
     font-size: 65px;
     text-align: center;
@@ -12,21 +11,17 @@ body {
     color: yellow;
     text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
 }
-
 #header-container {
     text-align: center;
 }
-
 .main-container {
     margin-bottom: 80px;
 }
-
 .form-container {
     margin: auto;
     height: 200px;
     padding-top: 200px;
 }
-
 .p1 {
     font-size: 25px;
     margin-bottom: 0px;
@@ -34,7 +29,6 @@ body {
     font-family: 'IM Fell Great Primer SC', serif;
     text-shadow: 2px 2px 6px white;
 }
-
 .p2 {
     font-size: 22px;
     color: white;
@@ -43,7 +37,6 @@ body {
     /*font-family: 'Sancreek', cursive;*/
     /*font-family: 'Playfair Display SC', serif;*/
 }
-
 .p3 {
     font-size: 15px;
     color: white;
@@ -53,28 +46,24 @@ body {
     padding-bottom: 15px;
     text-shadow: 2px 2px 6px white;
 }
-
-
 /* div.container {
     width: 100%;
   }
 } */
-
 div.box {
     box-sizing: border-box;
     width: 50%;
     border: 5px solid red;
     float: left;
-}
-
+}  
 .form-control-input {
     width: 1000px;
     height: 40px;
     border-radius: 8px;
     padding: 10px;
     margin-left: 65px;
+    box-shadow: 0px 0px 2px 2px black;
 }
-
 .button-submit {
     margin-left: 20px;
     font-family: 'IM Fell Great Primer SC', serif;
@@ -85,18 +74,15 @@ div.box {
     border-color: white;
     background-image: url(https://images.unsplash.com/photo-1509807995916-c332365e2d9e?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1271&q=80);
 }
-
 #submit:hover {
     box-shadow: 0 6px 12px 0 grey, 0 3px 10px 0 grey;
     color: yellow;
 }
-
 #display-bars {
     color: white;
     font-weight: bolder;
     margin-bottom: 20px;
 }
-
 .bars {
     text-align: center;
     width: 400px;
@@ -104,48 +90,41 @@ div.box {
     opacity: .5;
     cursor: pointer;
 }
-
 .bars:hover {
     background-color: black;
     opacity: 1;
     box-shadow: 0 0 10px white;
 }
-
 .h4 {
     text-align: center;
     color: white;
 }
-
 #container-two {
     margin: auto;
     display: inline block;
     text-align: center;
 }
-
 a {
     font-size: 20px;
 }
-
 .p0 {
     animation: pulse 5s infinite;
 }
-
+  
 @keyframes pulse {
     0% {
-        color: yellow;
+      color: yellow;
     }
     50% {
-        color: #FF4136;
+      color: #FF4136;
     }
     100% {
         color: yellow;
-    }
+      }
 }
-
 h1 {
     text-decoration: underline white;
 }
-
 .details {
     background-color: black;
     padding: 20px;
@@ -153,37 +132,93 @@ h1 {
     border-radius: 8px;
     border-style: solid;
 }
-
 .hours {
     padding-top: 5px;
     border: 1px solid black!important;
-}
-
-.review-list {
+  }
+.container {
     background-color: black;
-    width: 900px;
-}
-
+    margin-bottom: 10px;
+  }
 #map {
-    height: 200px;
+    height: 275px;
     /* The height is 400 pixels */
     width: 600px;
     background-color: grey;
     /* The width is the width of the web page */
+    margin: auto;
+    margin-left: 20px;
+    border-style: solid white;
+    border: groove black 9px;
+    margin-bottom: 15px;
+    
 }
-.p0 {
-    animation-name: spinner;
-  animation-timing-function: linear;
-  animation-iteration-count: 1;
-  animation-duration: 3s;
-  transform-style: preserve-3d;
-  text-align:center;
+.reviews {
+    background-color: black;
+    width: 1000px;
+    border: white;
+    margin: auto;
+    margin-bottom: 15px;
+    border-radius: 8px;
 }
-@keyframes spinner {
-  from {
-    transform: rotateY(0deg);
-  }
-  to {
-    transform: rotateY(-360deg);
-  }
+.list-item {
+    padding: 8px;
+    list-style: none;
 }
+#list-item-main {
+    text-decoration: underline white;
+    font-size: 18px;
+    color: white;
+    border-radius: 8px;
+    background-image: url(https://images.unsplash.com/photo-1492892132812-a00a8b245c45?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1050&q=80); 
+    font-family: 'Libre Baskerville', serif;
+}
+#list-item-time {
+    font-size: 12px;
+    padding-left: 0px;
+    text-decoration: overline white;
+    font-family: 'Libre Baskerville', serif;
+    padding-top: 2px;
+}
+#list-item-rating {
+    font-family: 'Libre Baskerville', serif;
+    font-size: 14px;
+    margin-bottom: 5px;
+}
+#list-item-review {
+    /* font-family: 'Noto Sans KR', sans-serif; */
+    font-family: 'Libre Baskerville', serif;
+    font-size: 14px;
+    padding-bottom: 5px;
+}
+#active-image {
+    position: absolute;
+    margin-bottom: 20px;
+}
+.picture-div {
+    background-color: black;
+    padding: 20px;
+    width: 600px;
+    height: 507px;
+    border-radius: 8px;
+    border-style: solid white;
+    margin-left: 15px;
+}
+.d-block {
+    margin-left: 175px;
+    height: 290px;
+    width: 290px;
+    margin-bottom: 15px;
+    /* box-shadow: 0px 0px 4px 4px white; */
+    border: groove black 9px;
+    
+}
+.review-list {
+    margin-bottom: 20px;
+    /* border-style: solid white; */
+}
+h1 {
+    font-family: 'Lobster', cursive;
+    font-size: 55px;
+}
+
