--- a/Assets/CSS/style.css
+++ b/Assets/CSS/style.css
@@ -172,6 +172,7 @@ h1 {
     border-radius: 8px;
     background-image: url(https://images.unsplash.com/photo-1492892132812-a00a8b245c45?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1050&q=80); 
     font-family: 'Libre Baskerville', serif;
+    width: 998px;
 }
 #list-item-time {
     font-size: 12px;
